// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BentoMenuButton Matches Snapshot (productGroups and externalLinks) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c2 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
  padding: 0;
  width: var(--size-2x);
}

.c2:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c2:hover,
.c2[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.5);
  border-color: transparent;
  color: #FFFFFF;
}

.c2[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c6 {
  color: #1B1C1E;
  font-size: 1rem;
  font-weight: var(--font-semi-bold);
  line-height: 1.5rem;
  margin: var(--spacing-3x) 0;
}

.c4 {
  background-color: #FFFFFF;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 0.2);
  color: #1B1C1E;
  list-style-type: none;
  position: absolute;
  width: 100%;
  z-index: 700;
}

.c0 {
  position: relative;
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c5 {
  left: 0px;
  max-width: 350px;
  min-width: 200px;
  position: absolute;
  top: 4px;
  width: auto;
  z-index: 99998;
}

.c16 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  line-height: 1.5rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c16:hover {
  color: #003A5A;
}

.c16:visited {
  color: #006296;
}

.c16:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c21 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  color: #8FCEF0;
  cursor: default;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  line-height: 1.5rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c21:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c14 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c20 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 1rem;
  margin-left: var(--spacing-half);
  margin-right: 0;
  width: 1rem;
}

.c17 {
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c17:visited svg {
  color: #006296;
}

.c19 {
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c18 {
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 2rem;
  overflow: hidden;
  padding: 0 var(--spacing-2x) 0 var(--spacing-3x);
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c18:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c18:hover {
  background-color: #DBDEE1;
}

.c18:visited {
  color: #006296;
  fill: #006296;
}

.c18:visited svg {
  color: #006296;
  fill: #006296;
}

.c18[disabled] {
  color: #B7BBC2;
  fill: #B7BBC2;
  pointer-events: none;
}

.c7 {
  font-size: 0.875rem;
  margin: 0;
  padding: 0 var(--spacing-2x);
  padding-bottom: var(--spacing-1x);
}

.c8 {
  margin: 0;
  overflow-y: auto;
  padding: 0;
}

.c8:not(:last-child)::after {
  border-bottom: 1px solid #DBDEE1;
  content: '';
  display: block;
  margin: 0 var(--spacing-2x);
}

.c10 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  background-color: #F1F2F2;
  border: 1px solid #DBDEE1;
  border-radius: var(--border-radius);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin: 0 var(--spacing-half) 2px 0;
  padding: var(--spacing-half);
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
}

.c13 {
  line-height: 1.25rem;
  margin: auto var(--spacing-1x) auto 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  font-size: 0.875rem;
  margin: 0;
  overflow: hidden;
  padding: 0 0 0 var(--spacing-half);
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2.5rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c9:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c9:hover {
  background-color: #DBDEE1;
}

.c9[disabled],
.c9[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c15 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2.5rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c15:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c15:hover {
  background-color: transparent;
}

.c15[disabled],
.c15[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c3 {
  box-sizing: border-box;
  position: fixed;
  z-index: 100000;
  bottom: var(--spacing-2x);
  right: var(--spacing-2x);
}

<body>
  <div>
    <div
      aria-label=""
      class="c0"
      data-testid="dropdown-container"
      id="uuid2"
    >
      <button
        aria-expanded="true"
        class="c1 c2 eds-DropdownMenuButton-button"
        data-testid="menu-button"
        type="button"
      >
        <svg
          color="currentColor"
          focusable="false"
          height="16"
          icon-name="bento"
          width="16"
        />
      </button>
    </div>
  </div>
  <div
    class="c3"
    data-testid="toasts"
  />
  <div
    class="c4 c5"
    data-testid="menu-dropdownMenu"
    id="eds-uuid1"
    style="width: initial;"
  >
    <h3
      class="c6 c7"
      id="A-links"
    >
      Product Group A
    </h3>
    <ul
      aria-labelledby="A-links"
      class="c8"
      data-testid="products-group"
    >
      <li>
        <a
          aria-disabled="false"
          class="c9"
          data-testid="listitem-optionA"
          href="/testa"
          tabindex="0"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="c10"
            color="currentColor"
            focusable="false"
            height="22"
            icon-name="logo-equisoft-ico"
            width="22"
          />
          <div
            class="c11"
          >
            <div
              class="c12"
            >
              <span
                class="c13"
              >
                Option A
              </span>
            </div>
          </div>
          <span
            class="c14"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c15"
          data-testid="listitem-optionB"
          disabled=""
          href="/testb"
          tabindex="-1"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="c10"
            color="currentColor"
            focusable="false"
            height="22"
            icon-name="logo-equisoft-ico"
            width="22"
          />
          <div
            class="c11"
          >
            <div
              class="c12"
            >
              <span
                class="c13"
              >
                Option B
              </span>
            </div>
          </div>
          <span
            class="c14"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c9"
          data-testid="listitem-optionC"
          href="/testc"
          tabindex="0"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="c10"
            color="currentColor"
            focusable="false"
            height="22"
            icon-name="logo-equisoft-ico"
            width="22"
          />
          <div
            class="c11"
          >
            <div
              class="c12"
            >
              <span
                class="c13"
              >
                Option C
              </span>
            </div>
          </div>
          <span
            class="c14"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c9"
          data-testid="listitem-optionD"
          href="/testd"
          tabindex="0"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="c10"
            color="currentColor"
            focusable="false"
            height="22"
            icon-name="logo-equisoft-ico"
            width="22"
          />
          <div
            class="c11"
          >
            <div
              class="c12"
            >
              <span
                class="c13"
              >
                Option D
              </span>
            </div>
          </div>
          <span
            class="c14"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
    </ul>
    <h3
      class="c6 c7"
      id="B-links"
    >
      Product Group B
    </h3>
    <ul
      aria-labelledby="B-links"
      class="c8"
      data-testid="products-group"
    >
      <li>
        <a
          aria-disabled="false"
          class="c9"
          data-testid="listitem-optionE"
          href="/teste"
          tabindex="0"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="c10"
            color="currentColor"
            focusable="false"
            height="22"
            icon-name="logo-equisoft-ico"
            width="22"
          />
          <div
            class="c11"
          >
            <div
              class="c12"
            >
              <span
                class="c13"
              >
                Option E
              </span>
            </div>
          </div>
          <span
            class="c14"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c9"
          data-testid="listitem-optionF"
          href="/testf"
          tabindex="0"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="c10"
            color="currentColor"
            focusable="false"
            height="22"
            icon-name="logo-equisoft-ico"
            width="22"
          />
          <div
            class="c11"
          >
            <div
              class="c12"
            >
              <span
                class="c13"
              >
                Option F
              </span>
            </div>
          </div>
          <span
            class="c14"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
    </ul>
    <h3
      class="c6 c7"
      id="external-links"
    >
      Resources
    </h3>
    <ul
      aria-labelledby="external-links"
      class="c8"
      data-testid="resources-group"
    >
      <li>
        <a
          aria-disabled="false"
          class="c16 c17 c18"
          href="/testa"
          target="_blank"
        >
          <span
            class="c19"
          >
            Option A
          </span>
          <svg
            aria-label="opens in a new tab"
            class="c20"
            color="currentColor"
            focusable="false"
            height="16"
            icon-name="external-link"
            role="img"
            width="16"
          />
          <span
            class="c14"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c21 c17 c18"
          disabled=""
          target="_blank"
        >
          <span
            class="c19"
          >
            Option B
          </span>
          <svg
            aria-label="opens in a new tab"
            class="c20"
            color="currentColor"
            focusable="false"
            height="16"
            icon-name="external-link"
            role="img"
            width="16"
          />
          <span
            class="c14"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
    </ul>
  </div>
</body>
`;

exports[`BentoMenuButton Matches Snapshot (productLinks and externalLinks) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c2 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
  padding: 0;
  width: var(--size-2x);
}

.c2:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c2:hover,
.c2[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.5);
  border-color: transparent;
  color: #FFFFFF;
}

.c2[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c6 {
  color: #1B1C1E;
  font-size: 1rem;
  font-weight: var(--font-semi-bold);
  line-height: 1.5rem;
  margin: var(--spacing-3x) 0;
}

.c4 {
  background-color: #FFFFFF;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 0.2);
  color: #1B1C1E;
  list-style-type: none;
  position: absolute;
  width: 100%;
  z-index: 700;
}

.c0 {
  position: relative;
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c5 {
  left: 0px;
  max-width: 350px;
  min-width: 200px;
  position: absolute;
  top: 4px;
  width: auto;
  z-index: 99998;
}

.c16 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  line-height: 1.5rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c16:hover {
  color: #003A5A;
}

.c16:visited {
  color: #006296;
}

.c16:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c21 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  color: #8FCEF0;
  cursor: default;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  line-height: 1.5rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c21:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c14 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c20 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 1rem;
  margin-left: var(--spacing-half);
  margin-right: 0;
  width: 1rem;
}

.c17 {
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c17:visited svg {
  color: #006296;
}

.c19 {
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c18 {
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 2rem;
  overflow: hidden;
  padding: 0 var(--spacing-2x) 0 var(--spacing-3x);
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c18:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c18:hover {
  background-color: #DBDEE1;
}

.c18:visited {
  color: #006296;
  fill: #006296;
}

.c18:visited svg {
  color: #006296;
  fill: #006296;
}

.c18[disabled] {
  color: #B7BBC2;
  fill: #B7BBC2;
  pointer-events: none;
}

.c7 {
  font-size: 0.875rem;
  margin: 0;
  padding: 0 var(--spacing-2x);
  padding-bottom: var(--spacing-1x);
}

.c8 {
  margin: 0;
  overflow-y: auto;
  padding: 0;
}

.c8:not(:last-child)::after {
  border-bottom: 1px solid #DBDEE1;
  content: '';
  display: block;
  margin: 0 var(--spacing-2x);
}

.c10 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  background-color: #F1F2F2;
  border: 1px solid #DBDEE1;
  border-radius: var(--border-radius);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin: 0 var(--spacing-half) 2px 0;
  padding: var(--spacing-half);
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
}

.c13 {
  line-height: 1.25rem;
  margin: auto var(--spacing-1x) auto 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  font-size: 0.875rem;
  margin: 0;
  overflow: hidden;
  padding: 0 0 0 var(--spacing-half);
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2.5rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c9:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c9:hover {
  background-color: #DBDEE1;
}

.c9[disabled],
.c9[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c15 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2.5rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c15:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c15:hover {
  background-color: transparent;
}

.c15[disabled],
.c15[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c3 {
  box-sizing: border-box;
  position: fixed;
  z-index: 100000;
  bottom: var(--spacing-2x);
  right: var(--spacing-2x);
}

<body>
  <div>
    <div
      aria-label=""
      class="c0"
      data-testid="dropdown-container"
      id="uuid2"
    >
      <button
        aria-expanded="true"
        class="c1 c2 eds-DropdownMenuButton-button"
        data-testid="menu-button"
        type="button"
      >
        <svg
          color="currentColor"
          focusable="false"
          height="16"
          icon-name="bento"
          width="16"
        />
      </button>
    </div>
  </div>
  <div
    class="c3"
    data-testid="toasts"
  />
  <div
    class="c4 c5"
    data-testid="menu-dropdownMenu"
    id="eds-uuid1"
    style="width: initial;"
  >
    <h3
      class="c6 c7"
      id="product-links"
    >
      Products
    </h3>
    <ul
      aria-labelledby="product-links"
      class="c8"
      data-testid="products-group"
    >
      <li>
        <a
          aria-disabled="false"
          class="c9"
          data-testid="listitem-optionA"
          href="/testa"
          tabindex="0"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="c10"
            color="currentColor"
            focusable="false"
            height="22"
            icon-name="logo-equisoft-ico"
            width="22"
          />
          <div
            class="c11"
          >
            <div
              class="c12"
            >
              <span
                class="c13"
              >
                Option A
              </span>
            </div>
          </div>
          <span
            class="c14"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c15"
          data-testid="listitem-optionB"
          disabled=""
          href="/testb"
          tabindex="-1"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="c10"
            color="currentColor"
            focusable="false"
            height="22"
            icon-name="logo-equisoft-ico"
            width="22"
          />
          <div
            class="c11"
          >
            <div
              class="c12"
            >
              <span
                class="c13"
              >
                Option B
              </span>
            </div>
          </div>
          <span
            class="c14"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c9"
          data-testid="listitem-optionC"
          href="/testc"
          tabindex="0"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="c10"
            color="currentColor"
            focusable="false"
            height="22"
            icon-name="logo-equisoft-ico"
            width="22"
          />
          <div
            class="c11"
          >
            <div
              class="c12"
            >
              <span
                class="c13"
              >
                Option C
              </span>
            </div>
          </div>
          <span
            class="c14"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c9"
          data-testid="listitem-optionD"
          href="/testd"
          tabindex="0"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="c10"
            color="currentColor"
            focusable="false"
            height="22"
            icon-name="logo-equisoft-ico"
            width="22"
          />
          <div
            class="c11"
          >
            <div
              class="c12"
            >
              <span
                class="c13"
              >
                Option D
              </span>
            </div>
          </div>
          <span
            class="c14"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
    </ul>
    <h3
      class="c6 c7"
      id="external-links"
    >
      Resources
    </h3>
    <ul
      aria-labelledby="external-links"
      class="c8"
      data-testid="resources-group"
    >
      <li>
        <a
          aria-disabled="false"
          class="c16 c17 c18"
          href="/testa"
          target="_blank"
        >
          <span
            class="c19"
          >
            Option A
          </span>
          <svg
            aria-label="opens in a new tab"
            class="c20"
            color="currentColor"
            focusable="false"
            height="16"
            icon-name="external-link"
            role="img"
            width="16"
          />
          <span
            class="c14"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c21 c17 c18"
          disabled=""
          target="_blank"
        >
          <span
            class="c19"
          >
            Option B
          </span>
          <svg
            aria-label="opens in a new tab"
            class="c20"
            color="currentColor"
            focusable="false"
            height="16"
            icon-name="external-link"
            role="img"
            width="16"
          />
          <span
            class="c14"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
    </ul>
  </div>
</body>
`;

exports[`BentoMenuButton Matches Snapshot (tag="nav") 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c2 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
  padding: 0;
  width: var(--size-2x);
}

.c2:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c2:hover,
.c2[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.5);
  border-color: transparent;
  color: #FFFFFF;
}

.c2[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c0 {
  position: relative;
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

<nav
  aria-label="Menu"
  class="c0"
  data-testid="dropdown-container"
  id="uuid2"
>
  <button
    aria-expanded="false"
    class="c1 c2 eds-DropdownMenuButton-button"
    data-testid="menu-button"
    type="button"
  >
    <svg
      color="currentColor"
      focusable="false"
      height="16"
      icon-name="bento"
      width="16"
    />
  </button>
</nav>
`;
